--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ '/dist/main.css' | relative_url }}">
-    <title>{{page.title}}</title>
-</head>
+
+{% include head.html %}
 
 <body>
+
+<!-- dynamic blog sections -->
+
+{% assign seenPost = "[0]" %}
+{% include /navigation/header-drop.html %}
     {{content}}
+{% include footer.html %}
+{{seenPost}}
+<!-- scripts -->
+{% include body-scripts.html %}
 </body>
+
 
 </html>
