add scrolling banner include

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
 
 {% assign seenPost = "[0]" %}
 {% include /navigation/header-drop.html %}
+{% include scrolling-banner.html %}
     {{content}}
 {% include footer.html %}
 {{seenPost}}
