--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -5,8 +5,8 @@
 
 <section class="md:flex">
   <div class="p-10 justify-start flex items-center border border-black relative">
-    <div class=" md:-rotate-90 text-5xl w-[20rem] md:mb-[-20rem]">
-    <h2 class="w-[100rem]">{{ page.banner_html}}</h2>
+    <div class=" md:-rotate-90 md:text-5xl text-4xl w-[20rem] md:mb-[-20rem]">
+    <h2 class="md:w-[100rem] w-full">{{ page.banner_html}}</h2>
     </div>
   
   </div>
