--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
       <a href="/"><img class="w-1/2 border border-black object-contain object-center m-auto" src="/images/company_logo.png"></a>
   </div>
 
-  <div class="item-right justify-end p-5">
+  <div class="item-right justify-end md:p-5 p-2">
     <nav class="flex item-right justify-end">
       <a href="#" class="nav-item"> subscribe  &nbsp;&nbsp; |  &nbsp; &nbsp;&nbsp;</a>
     <a class="p-x"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 ">
