--- a/_includes/home-blog-sections/blog-loop-4.html
+++ b/_includes/home-blog-sections/blog-loop-4.html
@@ -8,7 +8,7 @@
 
     <div class="p-10 justify-start flex items-center relative">
       <div class="border border-black md:-rotate-90 text-5xl w-[20rem] md:mb-[-15rem]">
-      <h2 class="w-[30rem]"> Latest in {{targetCat}} </h2>
+      <h2 class="md:w-[30rem] w-full"> Latest in {{targetCat}} </h2>
       </div>
     </div>
 
