--- a/_includes/socials-nav.html
+++ b/_includes/socials-nav.html
@@ -1,4 +1,4 @@
-<nav class="flex">
+<nav class="flex items-center">
 
 {% if site.data.socials.instagram_link %}
 <a class="block " href="{{site.data.socials.facebook_link}}">
