--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
 
   <div class="item-right justify-end md:p-5 p-2">
     <nav class="flex item-right justify-end">
-      <a href="#" class="nav-item"> subscribe  &nbsp;&nbsp; |  &nbsp; &nbsp;&nbsp;</a>
+      <a href="#" class="nav-item md:text-base text-sm"> subscribe  &nbsp;&nbsp; |  &nbsp; &nbsp;&nbsp;</a>
     <a class="p-x"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 ">
       <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z" />
     </svg>
